# Form-analysis-server-specify-kit

./: .env.example  .gitignore  API_PREFIX_FIX_REPORT.md  BATCH_IMPORT_ERROR_FIX_REPORT.md  CLAUDE.md  CSV_FOLDER_VALIDATION_REPORT.md  DATABASE_FIELD_FIX_REPORT.md  DATABASE_MIGRATION_ERROR_FIX_REPORT.md  DATA_LOSS_BUG_FIX.md  DEPLOYMENT_GUIDE.md  DOCKER_REBUILD_TEST_REPORT.md  DOCUMENTATION_INDEX.md  FILE_ORGANIZATION.md  FINAL_PORT_TEST_REPORT.md  FINAL_STATUS_REPORT.ps1  FINAL_SYSTEM_VERIFICATION_REPORT.md  FRONTEND_AND_DATE_FIX_REPORT.md  FRONTEND_CONNECTION_FIX_REPORT.md  FRONTEND_DATE_DISPLAY_GUIDE.md  FRONTEND_FIXES_IMPLEMENTATION_REPORT.md  GENERALIZATION_GUIDE.md  LOG_AND_DATABASE_FIX_SUMMARY.md  LOG_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  LOT_NO_VALIDATION_FIX_REPORT.md  P1_2411012_04_test.csv  P1_2503033_98.csv  P3_2503033_01_test.csv  P3_2503033_96.csv  P3_ITEMS_ERROR_REPORT.md  P3_ITEMS_IMPLEMENTATION_SUMMARY.md  P3_ITEMS_MIGRATION_COMPLETION_REPORT.md  P3_ITEMS_TEST_REPORT.md  P3_LOT_NO_FIX_TEST_REPORT.md  P3_LOT_NO_FLEXIBLE_HANDLING_REPORT.md  PORT_CONFLICT_FIX_REPORT.md  PORT_CONFLICT_RESOLUTION_REPORT.md  README.md  README_DEMO.md  README_DEV.md  RELEASE_NOTE_DEMO_20260223.md  (+21 more)
form-analysis-server/backend/: .env.dev  .env.dev.example  .env.logging  .env.logging.example  .env.test  .env.test.example  API_DESIGN_EXPLANATION.md  ASYNC_TESTS_COMPLETION_REPORT.md  BACKEND_COMPLETION_REPORT.md  DATABASE_SETUP.md  Dockerfile  IMPORT_EXPORT_COMPLETION_REPORT.py  INTEGRATION_TEST_REPORT.md  LICENSE  LOGGING_GUIDE.md  README.md  UPLOAD_COMPLETION_REPORT.py  VALIDATE_API_COMPLETION_REPORT.py  alembic.ini  analyze_product_ids.py  analyze_single_product_id.py  api_models_design.py  api_routes_design.py  check_all_duplicates.py  check_date_range.py  check_duplicates_container.py  check_p123_relation.py  check_p2_items_count.py  check_product_ids.py  cleanup_p3_items.py  conftest.py  create_tables.py  create_test_data_p123.py  create_test_via_api.py  database_migration_design.sql  database_schema.sql  delete_unknown_product_ids.py  dump_p2_rows.py  entrypoint.sh  fix_p2_duplicates.py  (+49 more)
form-analysis-server/backend/alembic/: env.py
form-analysis-server/backend/alembic/versions/: 2025_01_28_0100-add_product_id_and_material_tracking_fields.py  2025_11_08_0122-ae889647f4f2_create_initial_tables_upload_jobs_.py  2025_11_10_0110-d0c4b28c0776_add_p1_p2_p3_data_types.py  2025_11_15_0001-add_unique_constraint_lot_no_data_type.py  2025_11_16_1543-add_file_content_field.py  2025_12_15_1437-011dc47903ed_remove_p3_lot_no_unique_constraint.py  2025_12_28_0000_refactor_schema_v2.py  2025_12_28_0100_create_import_pipeline_tables.py  2026_01_16_0001-traceability_upload_jobs.py  2026_01_16_0002-traceability_import_jobs.py  2026_01_16_0003-traceability_upload_jobs_last_status.py  2026_01_16_0004-traceability_import_jobs_last_status.py  2026_01_17_0001-tenant_api_keys_v1.py  2026_01_17_0002-merge_traceability_heads_v1.py  2026_01_17_0003-tenant_users_v1.py  2026_01_17_0004-tenant_api_keys_add_user_id_v1.py  2026_01_20_0001-pdf_conversion_jobs_output_paths_v1.py  2026_01_29_0001-tenant_users_add_must_change_password_v1.py  2026_03_08_0001-p2_items_v2_add_production_date_yyyymmdd.py  2026_03_08_0002-p2_items_v2_add_trace_lot_no.py  2026_03_09_0003-p2_items_v2_add_slitting_result.py  2026_03_23_0004-pdf_conversion_jobs_add_winder_number.py  2026_03_25_0001-generic_schema_tables.py  2026_03_30_0001-generic_records_add_production_date_gin.py
form-analysis-server/backend/app/: __init__.py  main.py
form-analysis-server/backend/app/api/: __init__.py  constants.py  deps.py  routes_analytics.py  routes_audit_events.py  routes_auth.py  routes_edit.py  routes_export.py  routes_health.py  routes_import.py  routes_import_v2.py  routes_logs.py  routes_qc.py  routes_query.py  routes_query_backup.py  routes_query_v2.py  routes_stations.py  routes_tenants.py  routes_upload.py  routes_ut.py  routes_validate.py  traceability.py
form-analysis-server/backend/app/config/: __init__.py  analytics_config.py  analytics_field_mapping.py  constants.py  ut_field_mapping.py
form-analysis-server/backend/app/core/: auth.py  bootstrap.py  config.py  database.py  log_client.py  logging.py  middleware.py  monitoring.py  password.py  rate_limit.py  seed_stations.py  tenant_resolver.py
form-analysis-server/backend/app/models/: __init__.py  analytics_mapping.py  audit.py  base_record.py  generic_record.py  import_job.py  p1_record.py  p2_item.py  p2_item_v2.py  p2_record.py  p3_item.py  p3_item_v2.py  p3_record.py  pdf_conversion_job.py  pdf_upload.py  qc_record.py  record.py  station.py  tenant.py  upload_error.py  upload_job.py  validation_rule.py
form-analysis-server/backend/app/schemas/: __init__.py  audit.py  audit_event.py  import_data.py  import_job.py  pdf_conversion.py  record_schema.py  upload.py  upload_error_schema.py  upload_job_schema.py  validate.py
form-analysis-server/backend/app/services/: __init__.py  analytical_four_adapter.py  analytics_data_fetcher.py  analytics_external.py  audit_events.py  csv_field_mapper.py  generic_traceability.py  generic_validator.py  import_v2.py  pdf_conversion.py  product_id_generator.py  production_date_extractor.py  qc_import.py  schema_service.py  traceability_flattener.py  ut_flattener.py  validation.py
form-analysis-server/backend/app/utils/: normalization.py
form-analysis-server/backend/migrations/: add_pdf_conversion_job_output_paths.sql  create_items_v2_tables.sql
form-analysis-server/backend/scripts/: bootstrap_tenant_api_key.py
form-analysis-server/backend/scripts/manual/: README.md  analyze_product_ids.py  analyze_single_product_id.py  api_models_design.py  api_routes_design.py  audit_artifact_token_intersection.py  audit_p2_trace_lot_no_backfill.py  backfill_p2_item_dates.py  backfill_p2_items_v2_fields.sql  backfill_p2_trace_lot_no.py  check_all_duplicates.py  (+32 more)
form-analysis-server/backend/tests/: README.md  conftest.py  test_integration.py  test_new_features.py  test_no_legacy_frontend_query_calls.py  test_record.py  test_upload_error.py  test_upload_job.py
(+493 files in other folders)
