[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "form-analysis-backend"
version = "0.1.0"
description = "File Upload Validation System - Backend API"
authors = [{name = "Development Team", email = "dev@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

# Core dependencies
dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Data validation & serialization
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Database & ORM
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "aiosqlite>=0.20.0",
    
    # File handling
    "python-multipart>=0.0.6",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    
    # Utilities
    "python-json-logger>=2.0.7",
    "structlog>=24.4.0",
    "uuid-utils>=0.7.0",
    "python-dateutil>=2.8.2",
    
    # HTTP & async
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",  # For API testing
    
    # Code quality
    "ruff>=0.1.5",
    "black>=23.9.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    
    # Type stubs
    "types-python-dateutil",
    "types-requests",
    
    # Development tools
    "ipython>=8.17.0",
    "rich>=13.7.0",  # Better console output
]

[project.urls]
Homepage = "https://github.com/your-org/form-analysis-server"
Repository = "https://github.com/your-org/form-analysis-server.git"
Issues = "https://github.com/your-org/form-analysis-server/issues"
Documentation = "https://github.com/your-org/form-analysis-server/blob/main/README.md"

# Ruff configuration (Python linter & formatter)
[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "alembic/versions/*.py",
    "app/api/routes_query_backup.py",
    "scripts/manual/",
    "test_advanced_search.py",
    "test_api.py",
    "test_api_upload.py",
    "test_constants_api.py",
    "test_import_export_api.py",
    "test_integration.py",
    "test_integration_full_flow.py",
    "test_lot_no_regex.py",
    "test_models.py",
    "test_new_architecture.py",
    "test_new_p3_format.py",
    "test_product_id.py",
    "test_schemas.py",
    "test_traceability_api.py",
    "test_upload_functionality.py",
    "test_validate_api.py",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "BLE", # flake8-blind-except
]
ignore = [
    "E501",  # line-too-long (keep formatter-only policy for now)
    "E402",  # import order is intentionally used in some modules/scripts
    "E712",  # SQLAlchemy boolean comparisons (allow existing style for now)
    "E722",  # allow bare except in best-effort paths (legacy)
    "W291",  # trailing whitespace (mostly in long docstrings)
    "W293",  # whitespace on blank line (mostly in long docstrings)
    "B008",  # FastAPI Depends/Query patterns intentionally use call defaults
    "B007",  # unused loop variable in a few legacy loops
    "B023",  # loop variable binding in lambdas (legacy scripts)
    "B904",  # raise-without-from (legacy error wrapping)
    "BLE001", # best-effort exception handling in legacy paths
    "COM812", # trailing-comma-missing (conflicts with formatter)
    "ISC001", # single-line-implicit-string-concatenation (conflicts with formatter)
    "S101",   # assert (OK in tests)
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert statements
    "PLR2004", # magic-value-comparison
    "ANN201",  # missing-return-type-undocumented-public-function
    "UP017",   # avoid churn: datetime.UTC alias migrations in tests
]
"alembic/versions/*.py" = [
    "F401", # unused-import
    "E501", # line-too-long
]

# Black configuration (code formatter)
[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | __pycache__
  | build
  | dist
  | alembic/versions
)/
'''

# MyPy configuration (type checker)
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "openpyxl.*",
    "alembic.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=70",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]